--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,5 +5,6 @@ COPY . .
 RUN pip install --no-cache-dir -r requirements.txt
 RUN python -m spacy download en_core_web_sm
 ENV PYTHONPATH=/app
+EXPOSE 8000
 CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"]
 
