--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,26 +1,21 @@
-FROM python:3.11-slim AS builder
-
-WORKDIR /app
-
-RUN apt-get update && apt-get install -y build-essential curl && rm -rf /var/lib/apt/lists/*
-
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
-COPY . .
-
-RUN python -m spacy download en_core_web_sm
-
-# Final stage with just runtime
 FROM python:3.11-slim
 
+# System dependencies (slimmed)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
-COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
-COPY --from=builder /usr/local/bin /usr/local/bin
-COPY --from=builder /app /app
+COPY . .
+# Install torch first with the extra index
+RUN pip install --no-cache-dir torch==2.2.0 --extra-index-url https://download.pytorch.org/whl/cpu
+# Then install the rest of the requirements (excluding torch)
+RUN pip install --no-cache-dir -r requirements.txt
+RUN python -m spacy download en_core_web_sm
 
-EXPOSE 8000
 ENV PYTHONPATH=/app
+EXPOSE 8000
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
