--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,11 +3,11 @@ fastapi==0.115.14
 pydantic==2.11.7
 python-dotenv==1.0.0
 python-multipart==0.0.20
-pytest==8.0.0
+#pytest==8.0.0 for local testing
 rapidfuzz==3.6.1
 sentence-transformers==2.5.1
 spacy==3.7.2
 SQLAlchemy==2.0.41
-torch==2.2.0
+# torch==2.2.0
 uvicorn==0.35.0
 pdfminer.six==20221105
