--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,18 +4,31 @@ FROM python:3.11-slim
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     curl \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
 WORKDIR /app
 
-COPY . .
-# Install torch first with the extra index
-RUN pip install --no-cache-dir torch==2.2.0 --extra-index-url https://download.pytorch.org/whl/cpu
-# Then install the rest of the requirements (excluding torch)
+# Copy requirements first for better caching
+COPY requirements.txt .
+
+# Install torch first with the extra index (CPU only for memory efficiency)
+RUN pip install --no-cache-dir torch==2.2.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+
+# Install the rest of the requirements
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Download spaCy model
 RUN python -m spacy download en_core_web_sm
 
+# Copy application code
+COPY . .
+
 ENV PYTHONPATH=/app
+ENV PYTHONUNBUFFERED=1
+ENV OMP_NUM_THREADS=1
+ENV MKL_NUM_THREADS=1
+
 EXPOSE 8000
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "${PORT:-8000}", "--workers", "1"]
