--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,6 @@ SQLAlchemy==2.0.41
 # torch==2.2.0
 uvicorn==0.35.0
 pdfminer.six==20221105
+email-validator==2.1.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
