--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
+  base = "frontend"
   command = "npm run build"
   publish = "dist"
+  functions = "netlify/functions"
 
 [[redirects]]
   from = "/*"
