--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -16,7 +16,8 @@ deprecation==2.1.0
 dnspython==2.7.0
 ecdsa==0.19.1
 email_validator==2.2.0
-en-core-web-sm==3.7.1fastapi==0.115.14
+en-core-web-sm==3.7.1
+fastapi==0.115.14
 filelock==3.18.0
 fsspec==2025.5.1
 git-filter-repo==2.47.0
