--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -16,7 +16,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: backend # All commands run inside backend folder
+        working-directory: backend
 
     steps:
       - name: Checkout repository
@@ -29,23 +29,14 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
-          # If the app subfolder has its own requirements (including a pinned spaCy model wheel), install them too
-          if [ -f app/requirements.txt ]; then pip install -r app/requirements.txt; fi
           pip install pytest
 
-      - name: Install spaCy and English model
+      - name: Install spaCy English model
         run: |
-          pip install spacy==3.8.7
-          pip install https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.7/en_core_web_sm-3.8.7-py3-none-any.whl
+          pip install https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
           python -m spacy link en_core_web_sm en --force
-
-      - name: Validate spaCy installation
-        run: |
-          # Confirm spaCy and any installed model wheels are compatible
-          python -m pip install --upgrade pip setuptools wheel
-          python -m spacy validate
 
       - name: Create .env file
         run: |
@@ -58,7 +49,3 @@ jobs:
 
       - name: Run tests with pytest
         run: pytest --maxfail=1 --disable-warnings -q
-
-      # Optional Docker build step if you want to test your Dockerfile:
-      # - name: Build Docker image
-      #   run: docker build -t your-image-name:latest .
